oauth2 페이스북 로그인 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,8 @@ spring.servlet.multipart.max-file-size=2MB
 spring.security.user.name=test
 spring.security.user.password=1234
 
+spring.security.oauth2.client.registration.facebook.client-id=270761112685766
+spring.security.oauth2.client.registration.facebook.client-secret=bffdcb9cfc2ecd6c676e076464116228
+spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+
 file.path=C:/Users/seon/Desktop/project/photogram_image/
